--- a/ebsi-access-control/package.json
+++ b/ebsi-access-control/package.json
@@ -2,7 +2,6 @@
   "name": "ebsi-access-control",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -10,11 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cef-ebsi/key-did-resolver": "^2.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.5",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "ec-key": "^0.0.4",
+    "luxon": "^3.4.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.0.2",
+    "web3": "^4.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -22,9 +28,11 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "dotenv": "^16.0.0",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "sass": "^1.69.5",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
