--- a/ebsi-access-control/.gitignore
+++ b/ebsi-access-control/.gitignore
@@ -10,6 +10,7 @@ lerna-debug.log*
 node_modules
 dist
 build
+cache
 dist-ssr
 *.local
 
@@ -23,5 +24,4 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-ec-secp256k1-priv-key.pem
-ec-secp256k1-pub-key.pem
+*.pem
