--- a/ebsi-access-control/package.json
+++ b/ebsi-access-control/package.json
@@ -23,6 +23,7 @@
     "web3": "^4.3.0"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
